--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </div>
 
-        <div class="rigthside">
+        <div class="rightside">
             <ul>
                 <li><a href="">Shop</a></li>
                 <li><a href="">Tesla Account</a></li>
