Adicionando itens a tag main e estiliziando

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
     </header>
 
     <main>
-        
+        <div class= "info">
+            <h1>Model S</h1>
+            <h2>Order Online For <a href=>Touchless Delivery<a></a></h2>
+        </div>
     </main>
 
     <footer>
