--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
     </main>
 
     <footer>
+        <div class="buttons--area">
+            <a class="btn--dark" href="">Custom Order</a>
+            <a class="btn--light" href="">Existing Inventory</a>
+        </div>
 
+        <div class="arrow-area">
+
+        </div>
     </footer>
     
 </body>
