arredondando bordas dos botões do footer e criando seta com animação

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <a class="btn--light" href="">Existing Inventory</a>
         </div>
 
-        <div class="arrow-area">
-
+        <div class="arrow--area">
+            <img class="arrow" src="assets/images/down.png" alt="" />
         </div>
     </footer>
     
